# acpidiff

./: .gitmodules  CMakeLists.txt
src/: acpidiff.cpp
